Updated cmp files after CRA change and new InProc tests

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocmultipleclientsperserver_ClientJob1.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocmultipleclientsperserver_ClientJob1.cmp
@@ -1,3 +1,4 @@
+Bytes per RPC	Throughput (GB/sec)
 Service Received 1024 MB so far
 Service Received 2048 MB so far
 Service Received 3072 MB so far
