--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeafterserverdone_Server_upgraded.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeafterserverdone_Server_upgraded.cmp
@@ -4,5 +4,6 @@ Bytes received: 4294967296
 DONE
 *X* At checkpoint, upgraded service received 245760 messages
 *X* At checkpoint, upgraded service received 245760 messages
+becoming upgraded primary
 *X* At checkpoint, upgraded service received 245760 messages
 *X* At checkpoint, upgraded service received 245760 messages
