--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradebeforeserverdone_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradebeforeserverdone_ClientJob.cmp
@@ -1,5 +1,5 @@
-ImmortalCoordinator -i=unittestinproctcpclientjob -p=1500
-*X* 65536	0.0229463864678826
+Bytes per RPC	Throughput (GB/sec)
+*X* 65536	0.0199926148880013
 Service Received 1024 MB so far
 *X* 32768	0.0367999240861726
 Service Received 2048 MB so far
