--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeclient_ClientJob_Verify.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeclient_ClientJob_Verify.cmp
@@ -1,29 +1,31 @@
+*X* Trying to connect IC and Language Binding
+*X* Trying to do second connection between IC and Language Binding
 Bytes per RPC	Throughput (GB/sec)
-*X* 65536	0.0178803877763325
+*X* 65536	0.00213166998771756
 Service Received 1024 MB so far
-*X* 32768	0.0320146467264891
+*X* 32768	0.00237720470867314
 Service Received 2048 MB so far
-*X* 16384	0.0360346132206953
+*X* 16384	0.00246027601866669
 Service Received 3072 MB so far
-*X* 8192	0.0715985033163424
+*X* 8192	0.0025416320808998
 Service Received 4096 MB so far
-*X* 4096	0.0679328978399811
+*X* 4096	0.00262063260772365
 Service Received 5120 MB so far
-*X* 2048	0.0702215635689236
+*X* 2048	0.00271062642638516
 Service Received 6144 MB so far
-*X* 1024	0.0668205320785328
+*X* 1024	0.00281217735687059
 Service Received 7168 MB so far
-*X* 512	0.0651556540558463
+*X* 512	0.00291707197473504
 Service Received 8192 MB so far
-*X* 256	0.0657289628226667
+*X* 256	0.00302272307040026
 Service Received 9216 MB so far
-*X* 128	0.064034135419364
+*X* 128	0.00312832878133601
 Service Received 10240 MB so far
-*X* 64	0.0419731530562905
+*X* 64	0.00324384190811947
 Service Received 11264 MB so far
-*X* 32	0.0268798285815271
+*X* 32	0.00331294326741953
 Service Received 12288 MB so far
-*X* 16	0.0128567774546708
+*X* 16	0.00328633423722237
 Service Received 13312 MB so far
 Bytes received: 13958643712
 DONE
