--- a/AmbrosiaTest/AmbrosiaTest/Cmp/upgradeclient_ClientJob.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/upgradeclient_ClientJob.cmp
@@ -1,6 +1,20 @@
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
 Bytes per RPC	Throughput (GB/sec)
-*X* 65536	0.0249644847750245
-Service Received 1024 MB so far
-
+Unable to read data from the transport connection: An existing connection was forcibly closed by the remote host.
+   at System.Net.Sockets.NetworkStream.EndRead(IAsyncResult asyncResult)
+   at System.Threading.Tasks.TaskFactory`1.FromAsyncTrimPromise`1.Complete(TInstance thisRef, Func`3 endMethod, IAsyncResult asyncResult, Boolean requiresSynchronization)
+--- End of stack trace from previous location where exception was thrown ---
+   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
+   at Ambrosia.StreamCommunicator.<ReadAllRequiredBytesAsync>d__26.MoveNext()
+--- End of stack trace from previous location where exception was thrown ---
+   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
+   at System.Runtime.CompilerServices.TaskAwaiter.HandleNonSuccessAndDebuggerNotification(Task task)
+   at Ambrosia.StreamCommunicator.<ReadIntFixedAsync>d__5.MoveNext()
+--- End of stack trace from previous location where exception was thrown ---
+   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
+   at Ambrosia.Immortal.<Dispatch>d__34.MoveNext()
+--- End of stack trace from previous location where exception was thrown ---
+   at System.Runtime.ExceptionServices.ExceptionDispatchInfo.Throw()
+   at System.Runtime.CompilerServices.TaskAwaiter.HandleNonSuccessAndDebuggerNotification(Task task)
+   at Ambrosia.Immortal.<>c__DisplayClass33_0.<<DispatchWrapper>b__0>d.MoveNext()
