--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocmultipleclientsperserver_ClientJob0.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocmultipleclientsperserver_ClientJob0.cmp
@@ -1,8 +1,10 @@
+Bytes per RPC	Throughput (GB/sec)
 Service Received 1024 MB so far
 Service Received 2048 MB so far
 Service Received 3072 MB so far
 *X* 65536	0.00623661107962322
 Service Received 4096 MB so far
+Service Received 5120 MB so far
 Service Received 6144 MB so far
 Service Received 7168 MB so far
 *X* 32768	0.00638966630041866
