--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpupgradeserver_Server_upgraded.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inproctcpupgradeserver_Server_upgraded.cmp
@@ -1,12 +1,14 @@
+*X* ImmortalCoordinator -i=inproctcpupgradeserverserver -p=2500
 *X* Trying to connect IC and Language Binding
 *X* Trying to connect IC and Language Binding
 *X* Trying to do second connection between IC and Language Binding
 *X* Press enter to terminate program.
 *X* Server in Entry Point
-*X* At checkpoint, upgraded service received 6762 messages
-*X* At checkpoint, upgraded service received 6762 messages
-*X* At checkpoint, upgraded service received 6762 messages
-*X* At checkpoint, upgraded service received 6762 messages
+*X* At checkpoint, upgraded service received 7096 messages
+*X* At checkpoint, upgraded service received 7096 messages
+becoming upgraded primary
+*X* At checkpoint, upgraded service received 7096 messages
+*X* At checkpoint, upgraded service received 7096 messages
 Received 1024 MB so far
 *X* At checkpoint, upgraded service received 27656 messages
 *X* At checkpoint, upgraded service received 27656 messages
