Updating to get .netcore tests running

--- a/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeclient_Server.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/inprocupgradeclient_Server.cmp
@@ -3,6 +3,6 @@
 *X* becoming primary
 *X* Press enter to terminate program.
 *X* Server in Entry Point
-*X* At checkpoint, received 15273 messages
-*X* At checkpoint, received 15273 messages
-Received 1024 MB so far
+*X* At checkpoint, received 15295 messages
+*X* At checkpoint, received 15295 messages
+*X* I'm healthy after 3000 checks at time:10/5/2020 2:37:08 PM
