--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Publisher.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Publisher.g.ts.cmp
@@ -106,10 +106,6 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
     {
         switch (message.type)
         {
-            case Messages.DispatchedMessageType.InitialMessage:
-                // TODO: Add your handler here
-                break;
-
             case Messages.DispatchedMessageType.RPC:
                 let rpc: Messages.IncomingRPC = message as Messages.IncomingRPC;
 
@@ -166,10 +162,39 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                         Meta.publishType("Letters", "number");
                         Meta.publishPostMethod("makeName", 1, ["firstName?: string", "lastName?: string"], "Names");
                         Meta.publishMethod(123, "DoIt", ["p1: Name[][]"]);
+                        // TODO: Add an exported function 'onICStarting(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
                         break;
 
+                    case Messages.AppEventType.ICStarted:
+                        // TODO: Add an exported function 'onICStarted(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        break;
+
+                    case Messages.AppEventType.ICStopped:
+                        // TODO: Add an exported function 'onICStopped(exitCode: number): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        break;
+
+                    case Messages.AppEventType.ICReadyForSelfCallRpc:
+                        // TODO: Add an exported function 'onICReadyForSelfCallRpc(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        break;
+    
                     case Messages.AppEventType.RecoveryComplete:
-                        // TODO: Normal app processing can begin
+                        // TODO: Add an exported function 'onRecoveryComplete(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        break;
+
+                    case Messages.AppEventType.UpgradeStateAndCode:
+                        // TODO: Add an exported [non-async] function 'onUpgradeStateAndCode(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        break;
+
+                    case Messages.AppEventType.IncomingCheckpointStreamSize:
+                        // TODO: Add an exported function 'onIncomingCheckpointStreamSize(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        break;
+                    
+                    case Messages.AppEventType.FirstStart:
+                        // TODO: Add an exported function 'onFirstStart(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        break;
+
+                    case Messages.AppEventType.BecomingPrimary:
+                        // TODO: Add an exported function 'onBecomingPrimary(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
                         break;
                 }
                 break;
