--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlers_Generated_Publisher.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlers_Generated_Publisher.g.ts.cmp
@@ -1,7 +1,7 @@
 // Generated publisher-side framework for the 'server' Ambrosia Node instance.
 // Note: This file was generated
 // Note: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
-import * as PTM from "./../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag"; // PTM = "Published Types and Methods"
+import * as PTM from "./../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_EventHandlers"; // PTM = "Published Types and Methods"
 import Ambrosia = require("ambrosia-node"); 
 import Utils = Ambrosia.Utils;
 import IC = Ambrosia.IC;
@@ -119,28 +119,8 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                     
                             switch (methodName)
                             {
-                                case "OneLineNoComment":
-                                    IC.postResult<void>(rpc, PTM.Test.OneLineNoComment());
-                                    break;
-                                
-                                case "MultiLineCommentBeforeTag":
-                                    IC.postResult<void>(rpc, PTM.Test.MultiLineCommentBeforeTag());
-                                    break;
-                                
-                                case "MultiSeparateLinesCommentBeforeTag":
-                                    IC.postResult<void>(rpc, PTM.Test.MultiSeparateLinesCommentBeforeTag());
-                                    break;
-                                
-                                case "EmptyLineBetweenTagAndFctn":
-                                    IC.postResult<void>(rpc, PTM.Test.EmptyLineBetweenTagAndFctn());
-                                    break;
-                                
-                                case "SpacingAroundTag":
-                                    IC.postResult<void>(rpc, PTM.Test.SpacingAroundTag());
-                                    break;
-                                
-                                case "JSDOcTag":
-                                    IC.postResult<void>(rpc, PTM.Test.JSDOcTag());
+                                case "onbecomingprimary":
+                                    IC.postResult<void>(rpc, PTM.Test.onbecomingprimary());
                                     break;
                                 
                                 default:
@@ -172,45 +152,41 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                 {
                     case Messages.AppEventType.ICStarting:
                         // Code-gen: Published types will go here
-                        Meta.publishPostMethod("OneLineNoComment", 1, [], "void");
-                        Meta.publishPostMethod("MultiLineCommentBeforeTag", 1, [], "void");
-                        Meta.publishPostMethod("MultiSeparateLinesCommentBeforeTag", 1, [], "void");
-                        Meta.publishPostMethod("EmptyLineBetweenTagAndFctn", 1, [], "void");
-                        Meta.publishPostMethod("SpacingAroundTag", 1, [], "void");
-                        Meta.publishPostMethod("JSDOcTag", 1, [], "void");
-                        // TODO: Add an exported function 'onICStarting(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        Meta.publishPostMethod("onbecomingprimary", 1, [], "void");
+                        PTM.onICStarting();
                         break;
 
                     case Messages.AppEventType.ICStarted:
-                        // TODO: Add an exported function 'onICStarted(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        PTM.onICStarted();
                         break;
 
                     case Messages.AppEventType.ICStopped:
-                        // TODO: Add an exported function 'onICStopped(exitCode: number): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        const exitCode: number = appEvent.args[0] as number;
+                        PTM.onICStopped(exitCode);
                         break;
 
                     case Messages.AppEventType.ICReadyForSelfCallRpc:
-                        // TODO: Add an exported function 'onICReadyForSelfCallRpc(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        PTM.onICReadyForSelfCallRpc();
                         break;
     
                     case Messages.AppEventType.RecoveryComplete:
-                        // TODO: Add an exported function 'onRecoveryComplete(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        PTM.Test.onRecoveryComplete();
                         break;
 
                     case Messages.AppEventType.UpgradeStateAndCode:
-                        // TODO: Add an exported [non-async] function 'onUpgradeStateAndCode(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        PTM.onUpgradeStateAndCode();
                         break;
 
                     case Messages.AppEventType.IncomingCheckpointStreamSize:
-                        // TODO: Add an exported function 'onIncomingCheckpointStreamSize(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        PTM.onIncomingCheckpointStreamSize();
                         break;
                     
                     case Messages.AppEventType.FirstStart:
-                        // TODO: Add an exported function 'onFirstStart(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported function 'onFirstStart(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_EventHandlers.ts then (after the next code-gen) a call to it will be generated here
                         break;
 
                     case Messages.AppEventType.BecomingPrimary:
-                        // TODO: Add an exported function 'onBecomingPrimary(): void' to ../../AmbrosiaTest/AmbrosiaTest/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
+                        PTM.Test.onBecomingPrimary();
                         break;
                 }
                 break;
