--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Publisher.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/ASTTest_Generated_Publisher.g.ts.cmp
@@ -1,7 +1,7 @@
 // Generated publisher-side framework for the 'server' Ambrosia Node instance.
 // Note: This file was generated
 // Note: You can edit this file, but to avoid losing your changes be sure to specify a 'mergeType' other than 'None' (the default is 'Annotate') when re-running emitTypeScriptFile[FromSource]().
-import * as PTM from "./../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/ASTTest"; // PTM = "Published Types and Methods"
+import * as PTM from "../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/ASTTest"; // PTM = "Published Types and Methods"
 import Ambrosia = require("ambrosia-node"); 
 import Utils = Ambrosia.Utils;
 import IC = Ambrosia.IC;
@@ -182,7 +182,9 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                         break;
 
                     case Messages.AppEventType.UpgradeStateAndCode:
-                        // TODO: Add an exported [non-async] function 'onUpgradeStateAndCode(): void' to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        // TODO: Add an exported [non-async] function 'onUpgradeStateAndCode(upgradeMode: Messages.AppUpgradeMode): void' to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/ASTTest.ts then (after the next code-gen) a call to it will be generated here
+                        // Note: You will need to import Ambrosia to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/ASTTest.ts in order to reference the 'Messages' namespace.
+                        //       Also, your handler should call IC.upgrade() [to upgrade code] and _appState.upgrade() [to upgrade state].
                         break;
 
                     case Messages.AppEventType.IncomingCheckpointStreamSize:
