--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_AmbrosiaTag_Generated_Publisher.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_AmbrosiaTag_Generated_Publisher.g.ts.cmp
@@ -143,6 +143,11 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                                     IC.postResult<void>(rpc, PTM.Test.JSDOcTag());
                                     break;
                                 
+                                case "fnOverload":
+                                    let name: string = IC.getPostMethodArg(rpc, "name?");
+                                    IC.postResult<void>(rpc, PTM.Test.fnOverload(name));
+                                    break;
+                                
                                 default:
                                     let errorMsg: string = `Post method '${methodName}' is not implemented`;
                                     Utils.log(`(${errorMsg})`, loggingPrefix)
@@ -178,6 +183,7 @@ async function dispatcherAsync(message: Messages.DispatchedMessage)
                         Meta.publishPostMethod("EmptyLineBetweenTagAndFctn", 1, [], "void");
                         Meta.publishPostMethod("SpacingAroundTag", 1, [], "void");
                         Meta.publishPostMethod("JSDOcTag", 1, [], "void");
+                        Meta.publishPostMethod("fnOverload", 1, ["name?: string"], "void");
                         // TODO: Add an exported function 'onICStarting(): void' to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/TS_AmbrosiaTag.ts then (after the next code-gen) a call to it will be generated here
                         break;
 
