--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/PI_Generated_Publisher.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/PI_Generated_Publisher.g.ts.cmp
@@ -9,7 +9,7 @@ import Messages = Ambrosia.Messages;
 import Meta = Ambrosia.Meta;
 import Streams = Ambrosia.Streams;
 
-// TODO: It's recommended that you copy this class and _appState variable to your input file (./JS_CodeGen_TestFiles/PI.ts)
+// TODO: It's recommended that you move this class and _appState variable to your input file (./JS_CodeGen_TestFiles/PI.ts) in an exported namespace/module
 class AppState extends Ambrosia.AmbrosiaAppState
 {
     // TODO: Define your application state here
